# MultiAgent

./: Cargo.toml  agent_config.json
Main/: Cargo.toml
Main/src/: main.rs
communication/: Cargo.toml
communication/src/: lib.rs  registration.rs
failed_alerts/: alert_7_1738638972.json  alert_7_1738638973.json  alert_7_1738638974.json  alert_7_1738638975.json  alert_7_1738638976.json  alert_7_1738638977.json  alert_7_1738638978.json  alert_7_1738638979.json  alert_7_1738638980.json
file_monitor/: Cargo.toml  README.md
file_monitor/src/: lib.rs
file_monitor/tests/: integration_test.rs  text_sensitive.txt
gui/: Cargo.toml
gui/src/: registration.rs
network_monitor/: Cargo.toml
network_monitor/src/: lib.rs
policy/src/: lib.rs
system_monitor/: Cargo.toml
system_monitor/src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
