[package]
name = "file_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
infer = "0.15"  # Alternative to magic for file type detection
tokio = { version = "1.24.1", features = ["full", "test-util"] }
pdf = "0.8"          # PDF handling
lopdf = "0.27.0"     # Alternative PDF handling
zip = "0.6"          # ZIP file handling
calamine = "0.21"    # Excel/Office file parsing
regex = "1.5"          # Regex for matching patterns
libc = "0.2"
notify = "5.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
